# fastapi_starter

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test_python_code.yml
backend/: .env.example  logging.conf
backend/app/: application_factory.py  config.py
backend/app/routers/: healthcheck.py
backend/tests/: conftest.py  test_healthcheck.py
