[project]
name = "fastapi-starter"
version = "0.1.0"
description = "A starter fastapi project with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.3",
  "gunicorn>=23.0.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.1",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest>=8.3.3",
  "ruff>=0.7.0",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
